--- a/javadevices/MARTE_EDA1Setup.form
+++ b/javadevices/MARTE_EDA1Setup.form
@@ -258,6 +258,24 @@
                             <Property name="offsetNid" type="int" value="1543"/>
                           </Properties>
                         </Component>
+                        <Component class="DeviceChoice" name="deviceChoice2">
+                          <Properties>
+                            <Property name="choiceIntValues" type="[I" editor="org.netbeans.modules.form.editors.PrimitiveTypeArrayEditor">
+                              <PropertyValue value="[1, 0]"/>
+                            </Property>
+                            <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
+                              <StringArray count="2">
+                                <StringItem index="0" value="Enabled"/>
+                                <StringItem index="1" value="Disabled"/>
+                              </StringArray>
+                            </Property>
+                            <Property name="convert" type="boolean" value="true"/>
+                            <Property name="identifier" type="java.lang.String" value=""/>
+                            <Property name="labelString" type="java.lang.String" value="Check Disruption: "/>
+                            <Property name="offsetNid" type="int" value="1879"/>
+                            <Property name="updateIdentifier" type="java.lang.String" value=""/>
+                          </Properties>
+                        </Component>
                       </SubComponents>
                     </Container>
                     <Container class="javax.swing.JPanel" name="jPanel12">
